fix overflow on mobile

--- a/src/sass/_buttons.scss
+++ b/src/sass/_buttons.scss
@@ -8,7 +8,7 @@
     font-family: $header-font-family;
     cursor: pointer;
     display: inline-block;
-    padding: 1em 0 0.833em;
+    padding: 1em 0 1em 0.833em;
     width: 13.500em;
     margin: 0 auto;
     min-height: 2.889em;
